--- a/LinkedIn.css
+++ b/LinkedIn.css
@@ -34,6 +34,13 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.nav-left img{
+  width: 34px;
+   margin-right: 8px;
+   margin-top:3px ;
+} 
+
 .nav-search {
   display: flex;
   justify-content: center;
@@ -42,6 +49,15 @@ body {
     */
   align-items: center;
   background: #f0f2f5;
+}
+
+.nav-search i{
+  color:black;
+  height:35px;
+  border-radius:4px;
+   display:flex;
+   align-items:center;
+   margin-left:10px;
 }
 /* .nav-search>input[type=text]{
   width:20rem;
@@ -104,11 +120,11 @@ body {
 }
 .user-icon {
   width: 2rem;
-  height: 2rem;
+  
   border-radius: 100%;
   overflow: hidden;
   background: linear-gradient(45deg, rgb(255, 230, 0), rgb(255, 0, 128) 80%);
-  padding: 3%;
+  padding: 5%;
   display:inline-block;
   position: relative;
   margin-left: 3rem;
@@ -134,14 +150,21 @@ a {
   transition-duration: 0.5s;
 }
 #list-menu {
-  background-color: whitesmoke;
+  background-color: white;
   border-width: 1px;
-  border-style: solid;
-  border-color: rgb(80, 9, 9);
+  border:1px solid #777;
+border-radius: 4%;
   display: none;
   position: absolute;
-  opacity:.7;
+  z-index: 1000;
+  /* box-shadow:40%  #222 ; */
+  
 }
+
+.profile-menu p:hover{
+  text-decoration: underline;
+}
+
 .show {
  display:block !important;
 }
@@ -154,7 +177,7 @@ a {
 
 .pro-icon {
   width: 3rem;
-  height: 3rem;
+  
   border-radius: 100%;
   overflow: hidden;
   background: linear-gradient(45deg, rgb(255, 230, 0), rgb(255, 0, 128) 80%);
@@ -178,7 +201,7 @@ a {
   border-radius: 20px;
   margin-left: rem;
   color: rgb(16, 16, 19);
-  background-color: rgb(149, 162, 236);
+  background-color: #EEE;
   text-align: center;
 }
 
@@ -193,52 +216,7 @@ a {
   cursor: pointer;
 }
 
-/* small screen 750 */
-@media screen and (max-width: 750px) {
-  .navBar {
-    display:block;
-    width:100%;
-  }
-  .container {
-    display:block;
-    width:100%;
-    
-  }
-}
-/* medium screen 970 */
-@media screen and (max-width: 970px) {
-  .navBar {
-    
-    display:inline-block;
-    width:100%;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-  .container {
-    display:inline-block;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-}
-/* large screen 1200 */
-@media screen and (max-width: 1200px) {
-  .navBar {
-    display:flex;
-    flex-wrap:wrap ;
-    
-    justify-content: center;
-    align-items: center;
-  }
-  .container {
-    
-    
-    justify-content: center;
-    align-items: center;
-  }
 
-}
 
 /*-------------------container ----------------- */
 .container {
@@ -249,7 +227,7 @@ a {
 }
 /*leftSide  */
 .left-side {
-  max-width: 25%;
+ 
   flex-basis: 25%;
   align-self: flex-start;
   position: sticky;
@@ -276,11 +254,25 @@ a {
 .my-profile img {
   margin-left: 25%;
   width: 30%;
+  height: 66PX;
   border-radius: 50%;
   background: #eee;
   padding: 1px;
   margin-top: -45px;
 }
+
+.my-profile h4{
+  margin-left:11%;
+  color:#222;
+  margin-top:1rem;
+}
+
+.my-profile h5{
+  padding-top:3%;
+    margin-left:15%;
+    color:#777;
+}
+
 .my-profile ul {
   list-style: none;
   margin: 1rem 0;
@@ -341,6 +333,12 @@ a {
 .activity-box a i {
   color: rgb(90, 168, 241);
 }
+
+.activity-box span:hover{
+  /* width:200px; */
+  text-decoration: underline;
+}
+
 .activity-box span {
   margin-left: 7px;
   font-size: 1rem;
@@ -355,33 +353,10 @@ a {
   border-radius: 50%;
 }
 
-@media (max-width: 375px) {
-  .navBars {
-    width: 550px;
-  }
-  #searchBars {
-    width: 550px;
-  }
-}
-/* medium screen 970 */
-@media (min-width: 750px) {
-  .navBars {
-    width: 970px;
-  }
-  #searchBars {
-    width: 550px;
-  }
-}
-/* large screen 1200 */
-@media (min-width: 1200px) {
-  .navBars {
-    width: 1170px;
-  }
-}
+
 
 /* ---------------- middle-side------------------*/
 .middle-side {
-  max-width: 47%;
   flex-basis: 47%;
   align-self: flex-start;
 }
@@ -556,8 +531,11 @@ a {
   flex-basis: 25%;
   align-self: flex-start;
   position: sticky;
-  top: 20px;
-  z-index: 100;
+  top:20px;
+  z-index: -1;
+  isolation: isolate;
+  
+
 }
 
 .add-feed {
@@ -565,6 +543,8 @@ a {
   cursor: pointer;
   background-color: #fff;
   border-radius: 6%;
+  
+ 
 }
 .add-feed h5 {
   color: rgb(65, 63, 63);
@@ -575,6 +555,7 @@ a {
   display: flex;
   justify-content: space-evenly;
   /* align-items: center; */
+  
 }
 
 .follow-icon {
@@ -622,6 +603,7 @@ a {
   margin-top: 10px;
 }
 
+
 .photo-bar {
   margin: 0.6rem 0;
   padding: 5px 5px;
@@ -643,7 +625,7 @@ a {
 }
 
 .partners a:hover {
-  color: rgb(163, 163, 221);
+  color: rgb(141, 141, 221);
 }
 
 .copyright {
@@ -652,7 +634,7 @@ a {
   justify-content: center;
   font-size: 12px;
   margin-top: 10px;
-  font-weight: 500;
+  
 }
 .copyright img {
   width: 14px;
@@ -663,4 +645,231 @@ a {
   font-weight: bold;
   font-size: large;
   color: rgb(63, 63, 248);
+}
+
+
+
+/* large screen 1200 */
+/* @media screen and (max-width: 1200px) {
+  .navBar {
+    display:flex;
+    
+    justify-content: center;
+    align-items: center;
+  }
+  .container {
+    
+    
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left-side{
+    flex-basis: 100%;
+    
+    position: static;
+    display: block;
+  }
+
+  .right-side{
+    flex-basis: 100%;
+    position: static;
+  }
+
+} */
+
+
+/* medium screen 970 */
+@media screen and (max-width: 970px) {
+  .navBar {
+    
+    display:inline-flex;
+    width:100%;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+.nav-left{
+  flex-basis: 41%;
+    margin: 2%;
+    display: block;
+    text-align: center;
+}
+
+.middle-nav{
+  margin:2%;
+}
+.nav-items{
+
+  margin-top: 5%;
+  
+}
+
+.grid{
+  display: none;
+}
+  .nav-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+  }
+
+  .user-icon{
+    
+    width: 10%;
+    padding:1%;
+  }
+  .container {
+    display:inline-block;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
+  .left-side{
+    flex-basis: 100%;
+    position: static;
+    display: block;
+  }
+
+
+  .cover-img{
+    flex-basis: 100%;
+    height:200px;
+  }
+
+  .my-profile img{
+    width:200px;
+    height:150px;
+    margin-top: -58px;
+    margin-left: 10%;
+}
+
+.profile-veiw{
+  text-align: center;
+  font-size: 2rem;
+}
+  
+.activity-box{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+}
+
+.activity-box span{
+  font-size: 2rem;
+}
+
+  .right-side{
+    flex-basis: 100%;
+    position: static;
+  }
+
+  .add-feed{
+    text-align: center;
+    font-size: 2rem;
+  }
+
+}
+
+
+
+/* small screen 750 */
+@media screen and (max-width: 750px) {
+  .navBar {
+    
+    display:inline-flex;
+    width:100%;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+.nav-left{
+  flex-basis: 41%;
+    margin: 2%;
+    display: block;
+    text-align: center;
+}
+
+.nav-items{
+  
+  /* justify-content: space-between;
+  align-items: center; */
+  /* display: contents; */
+  margin-top: 2%;
+}
+
+.grid{
+  display: none;
+}
+  .nav-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 2%;
+  }
+
+  .user-icon{
+    
+    width: 10%;
+    padding:1%;
+  }
+  .container {
+    display:inline-block;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+
+
+
+  .left-side{
+    flex-basis: 100%;
+    position: static;
+    display: block;
+  }
+
+
+  .cover-img{
+    flex-basis: 100%;
+    height:200px;
+  }
+
+  .my-profile img{
+    width:200px;
+    height:150px;
+    margin-top: -58px;
+    margin-left: 10%;
+}
+
+.profile-veiw{
+  text-align: center;
+  font-size: 2rem;
+}
+  
+.activity-box{
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+}
+
+.activity-box span{
+  font-size: 2rem;
+}
+
+  .right-side{
+    flex-basis: 100%;
+    position: static;
+  }
+
+  .add-feed{
+    text-align: center;
+    font-size: 2rem;
+  }
+
 }
