--- a/LinkedIn.css
+++ b/LinkedIn.css
@@ -697,7 +697,11 @@ border-radius: 4%;
 }
 
 .middle-nav{
-  margin:2%;
+  margin: 2%;
+  width: 100%;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
 }
 .nav-items{
 
